--- a/gssapi-wai.cabal
+++ b/gssapi-wai.cabal
@@ -1,4 +1,4 @@
-name:                haskell-gssapi-wai
+name:                gssapi-wai
 version:             0.1.0.0
 synopsis:            WAI Middleware for SPNEGO authentiaction
 description:         Basic WAI Middleware allows both SPNEGO and failback to Kerberos
@@ -8,7 +8,7 @@ license:             BSD3
 license-file:        LICENSE
 author:              Ondrej Palkovsky
 maintainer:          palkovsky.ondrej@gmail.com
-homepage:            https://github.com/ondrap/haskell-gssapi-wai
+homepage:            https://github.com/ondrap/gssapi-wai
 copyright:           Ondrej Palkovsky
 category:            Network
 build-type:          Simple
@@ -17,12 +17,12 @@ cabal-version:       >=1.10
 
 source-repository head
   type: git
-  location: https://github.com/ondrap/haskell-gssapi-wai.git
+  location: https://github.com/ondrap/gssapi-wai.git
 
 library
   exposed-modules:     Network.Wai.Middleware.SpnegoAuth
 
-  build-depends:       base >=4.8 && <4.10, haskell-gssapi, wai, wai-extra,
+  build-depends:       base >=4.8 && <4.10, gssapi, wai, wai-extra,
                        vault, base64-bytestring, bytestring, case-insensitive,
                        http-types
   default-language:    Haskell2010
