--- a/examples/stack.yaml
+++ b/examples/stack.yaml
@@ -5,7 +5,7 @@ resolver: lts-6.24
 packages:
 - '.'
 - '..'
-- '../../haskell-gssapi'
+- '../../gssapi'
 extra-deps: []
 
 # Override default flag values for local packages and extra-deps
